hphp/hack/test/typecheck/ref_foreach.php.exp
File "ref_foreach.php", line 11, characters 22-24:
Cannot take references to array elements. (Typing[4225])
